[gd_scene load_steps=4 format=1]

[ext_resource path="res://Scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://Assets/hud/lifebar_background.png" type="Texture" id=2]
[ext_resource path="res://Assets/hud/lifebar.png" type="Texture" id=3]

[node name="HUD" type="Node2D"]

script/script = ExtResource( 1 )

[node name="right_bg" type="Sprite" parent="."]

transform/pos = Vector2( 1072.61, 0 )
transform/scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )
centered = false
flip_h = true

[node name="left_bg" type="Sprite" parent="."]

transform/scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )
centered = false

[node name="your_hitpoints" type="Sprite" parent="."]

transform/pos = Vector2( 0, 10 )
transform/scale = Vector2( 0.18, 0.18 )
texture = ExtResource( 3 )
centered = false

[node name="player2_hitpoints" type="Sprite" parent="."]

transform/pos = Vector2( 1210, 10 )
transform/scale = Vector2( 0.18, 0.045 )
texture = ExtResource( 3 )
centered = false

[node name="player3_hitpoints" type="Sprite" parent="."]

transform/pos = Vector2( 1210, 30 )
transform/scale = Vector2( 0.18, 0.045 )
texture = ExtResource( 3 )
centered = false

[node name="player4_hitpoints" type="Sprite" parent="."]

transform/pos = Vector2( 1210, 50 )
transform/scale = Vector2( 0.18, 0.045 )
texture = ExtResource( 3 )
centered = false


